@@ -5,6 +5,7 @@ import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletResponse;
 import javax.validation.Valid;
@@ -118,7 +119,7 @@ public class LobbyController {
         for (Match match : matchService.findAll()) {
             if (match != null) {
                 if (match.getWinner() == null && !match.getPlayerStats().isEmpty()) {
-                    for (PlayerStats ps : match.getPlayerStats().stream().toList()) {
+                    for (PlayerStats ps : match.getPlayerStats().stream().collect(Collectors.toList())) {
                         if (ps.getUser() == loggedUser) {
                             Collection<PlayerStats> playingUsers = match.getPlayerStats();
                             playingUsers.remove(ps);
@@ -166,7 +167,7 @@ public class LobbyController {
           for (Match match : matchService.findAll()) {
             if (match != null) {
                 if (match.getWinner() == null && !match.getPlayerStats().isEmpty()) {
-                    for (PlayerStats ps : match.getPlayerStats().stream().toList()) {
+                    for (PlayerStats ps : match.getPlayerStats().stream().collect(Collectors.toList())) {
                         if (ps.getUser() == loggedUser) {
                             Collection<PlayerStats> playingUsers = match.getPlayerStats();
                             playingUsers.remove(ps);
